final 25th july

--- a/CustomIdentity/appsettings.json
+++ b/CustomIdentity/appsettings.json
@@ -11,6 +11,18 @@
 
   },
 
+
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderName": "TeamNext",
+    "SenderEmail": "AarnavGauli@gmail.com",
+    "Username": "AarnavGauli",
+    "Password": "vnpouxznocgjowvp"
+  },
+  
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
