Added variables in Appsetting

--- a/CustomIdentity/appsettings.json
+++ b/CustomIdentity/appsettings.json
@@ -7,8 +7,9 @@
   "SparrowSms": {
     "from": "CXNepal",
     "url": "http://api.sparrowsms.com/v2/sms",
-    "token": "v2_krziSPCh5gLoMZXKqILLIUY8Ut9.mIn9"
-
+    "token": "v2_krziSPCh5gLoMZXKqILLIUY8Ut9.mIn9",
+    "to": "9848580066",
+    "SubmissionTime": "15 5 * * 1-5" // Weekdays at 5:15 AM UTC that means 11am Nepal time. Must be in this format
   },
 
 
@@ -18,9 +19,9 @@
     "SenderName": "TeamNext",
     "SenderEmail": "AarnavGauli@gmail.com",
     "Username": "AarnavGauli",
-    "Password": "vnpouxznocgjowvp"
+    "Password": "vnpouxznocgjowvp",     //App password for mail
+    "ReceiverEmail": "Arnavgauli66@gmail.com"
   },
-  
 
 
   "Logging": {
